##
## autogenerated ChangeLog -- don't edit
##

2006-03-20 Monday 02:12  Rocky Bernstein <rocky@panix.com>

	* doc/bashdb.texi: Document some of the set/show logging commands.

2006-03-20 Monday 01:51  Rocky Bernstein <rocky@panix.com>

	* Makefile.am, NEWS, dbg-brk.inc, dbg-cmds.inc, dbg-complete.inc,
	  dbg-help.inc, dbg-init.inc, dbg-io.inc, dbg-log.inc,
	  dbg-main.inc.in, dbg-set.inc, dbg-show.inc, dbg-sig.inc,
	  doc/bashdb-man.pod, doc/bashdb.texi, test/misc.right,
	  test/sig.right: Add gdb-style set/show logging.  Break debugger
	  out into more files: dbg-log.inc and dbg-show.inc Email address
	  regularization.

2006-03-19 Sunday 21:48  Rocky Bernstein <rocky@panix.com>

	* Makefile.am, configure.ac, dbg-cmds.inc, dbg-complete.inc,
	  dbg-main.inc.in, test/run-watch1, test/watch1.tests:
	  dbg-complete.inc dbg-main.inc.in: move command completion code to
	  a separate file

	  configure.ac: Makefile.am: BASHDB_MAIN wasn't getting set
	  correctly Makefile.am: fix various shell quoting problems

	  test/watch1.*: make it work for "make distcheck" (or VPATH, or
	  build outside of source tree)

2006-03-19 Sunday 11:09  Rocky Bernstein <rocky@panix.com>

	* test/: complete.cmd, complete.right: Add more completion tests

2006-03-19 Sunday 04:48  Rocky Bernstein <rocky@panix.com>

	* dbg-cmds.inc, dbg-help.inc, dbg-info.inc, test/sig.right: Add
	  subcommand completion for set, info and show.

2006-03-19 Sunday 01:06  Rocky Bernstein <rocky@panix.com>

	* emacs/bashdb.el: Be able to turn bashdb tracking on and off.

2006-03-16 Thursday 05:03  Rocky Bernstein <rocky@panix.com>

	* emacs/bashdb.el: Allow tab to be completion.

2006-03-15 Wednesday 14:37  Rocky Bernstein <rocky@panix.com>

	* doc/bashdb.texi: small doc fix

2006-03-15 Wednesday 12:54  Rocky Bernstein <rocky@panix.com>

	* NEWS, doc/bashdb.texi, test/complete.cmd, test/complete.right:
	  bashdb.texi: document "complete" test/* add another "complete"
	  test
