@@ -20,7 +20,7 @@
 
 @c
 @c Name of debugger program.  Used also for prompt string.
-@set BASH the @acronym{BASH} debugger
+@set BASH @acronym{BASH}
 @set DBG the @value{BASH} debugger
 @set dBGP The @value{BASH} debugger
 @set DDD @acronym{DDD}
@@ -604,9 +604,15 @@ type @samp{bash --debugger @emph{script-name}} or @samp{bashdb
 @emph{script-name}} to start @value{DBG}.
 @item
 type @kbd{quit} or @kbd{C-d} inside the debugger to exit.
+@item 
+type @samp{bashdb -c @emph{command string}} to give a string to run 
+under the debugger
+@item 
+Modifying your program to enter the debugger at a particular point:
+@code{source ../bashdb-trace} and @code{_Dbg_set_trace ; : ; :}.
 @end itemize
 
-But also note there are two front-ends available as well. One can also
+There are also two front-ends available as well. One can also
 enter the debugger inside emacs via the command @code{M-x bashdb}
 after loading Emacs' Grand Unified Debugger, @code{gud}. See
 @ref{Emacs,,Using the BASH debugger from @sc{gnu} Emacs}. And there is
@@ -615,6 +621,7 @@ support in a @value{DDD} for bash.
 @menu
 * Starting the BASH debugger::    How to enter the BASH debugger
 * Quitting the BASH debugger::    How to leave the BASH debugger
+* Calling from Program::          Calling the debugger from inside your program
 @end menu
 
 @node Starting the BASH debugger
@@ -719,12 +726,14 @@ following list.
 @node Options for the bashdb script
 @subsection Command-line options for @code{bashdb} script
 
-You can run @DBG in various alternative modes---for example, in
-batch mode or quiet mode.
+You can run @DBG in various alternative modes---for example, in batch
+mode or quiet mode. If @code{getopts} support is available the script
+also allows long-form command options.
 
 @table @code
-@item -h 
+@item -h | --help
 @cindex @code{-h}
+@cindex @code{--help}
 This option causes @value{DBG} to print some basic help and exit.
 
 @item -V
@@ -732,26 +741,43 @@ This option causes @value{DBG} to print some basic help and exit.
 This option causes @DBG to print its version number and
 no-warranty blurb, and exit.
 
-@item -n
+@item -c | --command @var{cmd}
+@cindex @code{-c}
+@cindex @code{--command}
+Run the string instead of running a script
+
+@item -B | --basename
+@cindex @code{-B}
+@cindex @code{--basename}
+This option causes @DBG to print its version number and
+no-warranty blurb, and exit.
+
+@item -n | --nx | --no-init
 @cindex @code{-n}
+@cindex @code{--nx}
+@cindex @code{--no-init}
 Do not execute commands found in any initialization files.  Normally,
 @acronym{BASH} executes the commands in these files after all the command
 options and arguments have been processed.  @xref{Command Files,,Command
 files}.
 
-@item -q
+@item -q | --quiet
 @cindex @code{-q}
+@cindex @code{--quiet}
 ``Quiet''.  Do not print the introductory and copyright messages.  These
 messages are also suppressed in batch mode.
 
-@item -t
+@item -t | --terminal | --tty @var{tty}
 @cindex @code{-t}
+@cindex @code{--terminal}
+@cindex @code{--tty}
 ``Terminal output''.  Set the file or terminal that you want debugger command
 output to go to. Note that the debugger output is independent of the
 debugged script output.
 
-@item -L @var{directory}
+@item -L | --library @var{directory}
 @cindex @code{-L}
+@cindex @code{--library}
 Set directory where debugger files reside to @var{directory}. The
 default location is @code{../lib/bashdb} relative to the place that
 the bashdb script is located. For example if bashdb is located in
@@ -760,8 +786,9 @@ the bashdb script is located. For example if bashdb is located in
 you'll get an error when you run bashdb. Only if the default location
 is incorrect, should you need to use the @code{-L} option.
 
-@item -T @var{directory}
+@item -T | --tempdir @var{directory}
 @cindex @code{-T}
+@cindex @code{--tempdir}
 Set directory to use for writing temporary files.
 
 @end table
@@ -775,6 +802,74 @@ rather terminates the action of any @DBG command that is in
 progress and returns to @value{DBG} command level.  Inside a debugger
 command interpreter, use @code{quit} command (@pxref{Quit, ,Quitting
 the BASH debugger}).
+
+@node Calling from Program
+@section Calling the BASH debugger from inside your program
+
+Running a program from the debugger adds a bit of overhad and slows
+down your program quite a bit, and addressing this properly would mean
+some serious changes to @value{BASH} internals.
+
+If you have a @code{configure} script generated by autoconf, and you
+want to stop in the middle of the script, it can take quite a while.
+Another way to get into the debugger is to change the script and make
+an explicit call to the debugger. Because the debugger isn't involved
+before the first call, there is no overhead and the script will run at
+the same speed as if there were no debugger.
+
+There are two parts to calling the debugger from inside the script,
+``sourcing'' in the debugger code and then making the call calling the
+debugger to issue a ``step'' command. The name of file in
+@code{source} command is @code{bashdb-trace} and it is located in the
+directory where the other bash debugger files live. For example on
+GNU/Linux if it is in directory @code{/usr/local/share/bashdb}, you
+would first add to @value{BASH} ascript the line:
+
+@smallexample
+    source /usr/local/share/bashdb/bashdb-trace
+@end smallexample 
+
+Although I said that running under the debugger adds overhead which
+slows down you program, the above command in of it self will
+@emph{not} cause any slowdown. If possible, it's best to put this
+somewhere in the main-line code rather than in a function or in a
+subshell. If it is put in one of the latter and you step outside of
+the subshell or function, some of the global variables set up in
+@code{bashdb-trace} may be lost. One the other hand if you know your
+debugging will be confined to just the scope of the @code{source}
+command there is no problem.
+
+The second thing that needs to be done is put add statments to start
+stepping code, and this line looks like this:
+@smallexample
+     _Dbg_set_trace ; : ; :
+@end smallexample 
+
+(For reasons that are a mystery to me, the stepping seems to kick in
+only two statments after the call.)
+
+Putting these two components together, here's an example:
+@smallexample
+@cartouche
+  # Lots of stuff here. ...
+  x=2
+  source <path-to-program>/_Dbg_bash_trace
+  echo There can be lots of other statements between the above
+  echo and below line.
+  _Dbg_set_trace
+  y=3
+@end cartouche
+@end smallexample 
+
+You will be stopped before @code{y=3} in the debugger. 
+
+You can also supply options to @code{_Dbg_bash_trace} just as you would to
+the debugger itself. All of the options listed in @ref{Options for the
+bashdb script} can be used with the exception of @code{-c} (run a
+command) and of course you don't supply the name of a @value{BASH} script.
+
+For example to suppress the banner you could use @code{source
+_Dbg_bash_trace -q} in the above example.
 
 @node Running
 @chapter Script Setup inside the BASH Debugger
@@ -1222,7 +1317,7 @@ Automatic display}.
 
 @cindex breakpoint numbers
 @cindex numbers for breakpoints
-@DBG assigns a number to each breakpoint and watchpoint when
+@value{dBGP} assigns a number to each breakpoint and watchpoint when
 you create it; these numbers are successive integers starting with
 one.  In many of the commands for controlling various features of
 breakpoints you use the breakpoint number to say which breakpoint you
@@ -1232,7 +1327,7 @@ enable it again.
 
 @cindex watchpoints numbers
 @cindex numbers for watchpoints
-Watchpoint numbers however are distiguished from breakpoint numbers by
+Watchpoint numbers however are distinguished from breakpoint numbers by
 virtue of their being suffixed with the either an upper- or lower-case
 `W'.  For example, to enable breakpoint entry 0 along with watchpoint
 entry 1 you would write @samp{enable 1 2w}, the ``2w'' refers to the
@@ -1987,10 +2082,14 @@ The version number is the same as the one announced when you start
 @item show copying
 Display information about permission for copying @value{BASH}.
 
+@item show linetrace
+
+Show if line tracing is enabled. See also @ref{Line Tracing}.
+
 @item show logging
 
 Show summary information of logging variables which can be set via
-@code{set logging}.
+@code{set logging}. See also @ref{Logging}.
 
 @item show logging file
 
@@ -2608,7 +2707,8 @@ interacts with you in various ways given below.
 * Annotate::             Annotation Level (set annotate)
 * Basename::             Show basenames of file names only (set basename)
 * Debugger::             Allow debugging the debugger (set debugger)
-* File::                 Specifying a Script-File Associaton (file)
+* File::                 Specifying a Script-File Associaton (set file)
+* Line Tracing::         Show position information (set linetrace)
 * Logging::              Specifying where to write debugger output
 * Prompt::               Prompt (set prompt, show prompt)
 * Editing::              Command editing (set editing, show editing)
@@ -2677,6 +2777,27 @@ Directs @value{DBG} to use @var{script-file} whenever bash would have
 it refers to the filename given in @env{BASH_SOURCE}. The filename
 specified in @env{BASH_SOURCE} that gets overriden is shown when is
 this command is issued.
+@end table
+
+@node Line Tracing
+@subsection Show position information as statements are executed (@samp{set linetrace})
+
+@value{BASH} has @code{set -x} tracing to show commands as they are
+run. However missing from this is file and line position
+information. So the debugger compensates here for what I think is
+deficiency of @value{BASH} by providing this information. The downside
+is that this tracing is slower than the built-in tracing of
+@value{BASH}.
+
+The status of whether line tracing is enabled can be show via
+@code{show linetrace}.
+
+@table @code
+@kindex set linetrace
+@item set linetrace @r{[} on | 1 @r{]}
+Turn on line tracing.
+@item set linetrace @r{[} off | 0 @r{]}
+Turn off line tracing.
 @end table
 
 @node Logging
