@@ -1,0 +1,27 @@
+#!@BASH_PROG@
+# Towers of Hanoi
+
+init() {
+  _Dbg_set_trace
+  typeset -i max=3
+}
+
+hanoi() { 
+  local -i n=$1
+  local -r a=$2
+  local -r b=$3
+  local -r c=$4
+  if (( n > 0 )) ; then
+    (( n-- ))
+    hanoi $n $a $c $b
+    ((disc_num=max-n))
+    echo "Move disk $n on $a to $b"
+    if (( n > 0 )) ; then
+       hanoi $n $c $b $a
+    fi
+  fi
+}
+
+source @top_builddir@bashdb-trace -L @top_builddir@
+init
+hanoi $max "a" "b" "c"
