@@ -2,6 +2,10 @@
 ## autogenerated ChangeLog -- don't edit
 ##
 
+2006-03-25 Saturday 02:48  Rocky Bernstein <rocky@panix.com>
+
+	* NEWS, configure.ac: Get ready for 3.1-0.05 release
+
 2006-03-20 Monday 02:12  Rocky Bernstein <rocky@panix.com>
 
 	* doc/bashdb.texi: Document some of the set/show logging commands.
